# Verustd

./: .gitignore  Cargo.toml  README.md  flake.nix  ideas  proposal_draft.md
doc/: cites.bib  final.tex  mid_report.tex  outline.md  proposal.aux  proposal.bbl  proposal.bcf  proposal.blg  proposal.fdb_latexmk  proposal.fls  proposal.out  proposal.run.xml  proposal.tex
examples/: even_cell.rs  slide_1.rs  test_assert.rs  test_assume_spec.rs  test_break.rs  test_closure.rs  test_count_to_2.rs  test_div.rs  test_external_type.rs  test_file.rs  test_float.rs  test_import.rs  test_loop_invariant.rs  test_ord.rs  test_overflow.rs  test_proof_of_work.rs  test_ptr.rs  test_quantifier.rs  test_recursive.rs  test_sized.rs  test_tokens.rs  test_trait.rs  test_type_invariant.rs  test_unreach.rs  test_unwind.rs  test_vec_mut.rs  test_vec_update.rs  test_verus.rs  test_zst.rs
examples/practice/: min3.rs  practice_1.rs
src/: allocator.rs  lib.rs  main.rs
src/alloc/: Cargo.toml
src/alloc/src/: lib.rs  raw_vec.rs
src/alloc/src/collections/: mod.rs  raw_vec.rs
src/alloc/src/collections/binary_heap/: mod.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/str/: validations.rs
